<resources>
    <string name="app_name">mealPlanr</string>
    <string name="sunday_title_text">Sunday</string>
    <string name="monday_title_text">Monday</string>
    <string name="tuesday_title_text">Tuesday</string>
    <string name="wednesday_title_text">Wednesday</string>
    <string name="thursday_title_text">Thursday</string>
    <string name="friday_title_text">Friday</string>
    <string name="saturday_title_text">Saturday</string>

    <string name="sunday_title_description">Sunday title</string>
    <string name="monday_title_description">Monday title</string>
    <string name="tuesday_title_description">Tuesday title</string>
    <string name="wednesday_title_description">Wednesday title</string>
    <string name="thursday_title_description">Thursday title</string>
    <string name="friday_title_description">Friday title</string>
    <string name="saturday_title_description">Saturday title</string>

    <string name="new_meal_btn_text">New Meal</string>
    <string name="new_meal_btn_description">Starts an Activity to generate a new meal.</string>

    <string name="create_meal_btn_text">Create</string>
    <string name="create_meal_btn_description">Returns to main activity with a new meal.</string>

    <string name="destroy_meal_btn_text">Cancel</string>
    <string name="destroy_meal_btn_description">Returns to main activity without a new meal.</string>

    <string name="add_ingredient_btn_text">Add</string>
    <string name="add_ingredient_btn_description">Add the ingredient to the recipe.</string>

    <string name="meal_default_text">No meal selected yet!</string>
    <string name="meal_default_description">Edit to select a meal for this day.</string>

    <string name="new_meal_name_hint">Enter a name for your meal!</string>
    <string name="add_ingredient_hint">Add ingredients!</string>
    
    <string name="qty_tv_text">QTY</string>
    <string name="qty_tv_description">QTY label</string>

    <string name="unit_tv_text">Units</string>
    <string name="unit_tv_description">Helps with the scaling of the qty.</string>

    <string-array name="qty_option_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="units_option_spinner">
        <item>Items</item>
        <item>Lbs</item>
    </string-array>

    <string-array name="sunday_default_spinner">
        <item>No meals found!</item>
    </string-array>

    <string-array name="monday_default_spinner">
        <item>No meals found!</item>
    </string-array>

    <string-array name="tuesday_default_spinner">
        <item>No meals found!</item>
    </string-array>

    <string-array name="wednesday_default_spinner">
        <item>No meals found!</item>
    </string-array>

    <string-array name="thursday_default_spinner">
        <item>No meals found!</item>
    </string-array>

    <string-array name="friday_default_spinner">
        <item>No meals found!</item>
    </string-array>

    <string-array name="saturday_default_spinner">
        <item>No meals found!</item>
    </string-array>

    <string-array name="ingredient_list_default_listView">
        <item>No ingredients.</item>
    </string-array>

</resources>
